swagger corrido
